--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debmirror (2009xxxx) UNRELEASED; urgency=low
+
+  * New maintainer, with thanks to Goswin for his work on previous releases.
+
+ -- Frans Pop <fjp@debian.org>  Fri, 07 Aug 2009 19:24:01 +0200
+
 debmirror (20070123) unstable; urgency=low
 
   * Add dependency for libdigest-sha1-perl (ACK NMU) (Closes: #386707)
