--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 debmirror (2009xxxx) UNRELEASED; urgency=low
 
   * New maintainer, with thanks to Goswin for his work on previous releases.
+  * Remove no longer needed prerm script.
 
  -- Frans Pop <fjp@debian.org>  Fri, 07 Aug 2009 19:24:01 +0200
 
