Switch build system to debhelper
git-svn-id: svn://svn.debian.org/debmirror/trunk@20 73d8de8a-19be-0310-9dbb-b31ba50de310

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ debmirror (2009xxxx) UNRELEASED; urgency=low
   * New maintainer, with thanks to Goswin for his work on previous releases.
   * Remove no longer needed prerm script.
   * Correct syntax of NEWS.Debian file.
+  * Switch build system to debhelper.
 
  -- Frans Pop <fjp@debian.org>  Fri, 07 Aug 2009 19:24:01 +0200
 
