--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ debmirror (2009xxxx) UNRELEASED; urgency=low
   * Remove no longer needed prerm script.
   * Correct syntax of NEWS.Debian file.
   * Switch build system to debhelper.
+  * Bump standards version to 3.8.2.
 
  -- Frans Pop <fjp@debian.org>  Fri, 07 Aug 2009 19:24:01 +0200
 
