--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debmirror (2009xxxx) UNRELEASED; urgency=low
+
+  * Set more accurate versioned build dependency on debhelper.
+
+ -- Frans Pop <fjp@debian.org>  Tue, 11 Aug 2009 14:38:27 +0200
+
 debmirror (20090807) unstable; urgency=low
 
   * New maintainer, with thanks to Goswin for his work on previous releases.
