--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 debmirror (2009xxxx) UNRELEASED; urgency=low
 
   * Set more accurate versioned build dependency on debhelper.
+  * Apply patch from Kees Cook to make parsing of Packages/Sources files a bit
+    less fragile. Closes: #451021.
 
  -- Frans Pop <fjp@debian.org>  Tue, 11 Aug 2009 14:38:27 +0200
 
