--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ debmirror (2009xxxx) UNRELEASED; urgency=low
     less fragile. Closes: #451021.
   * Add sanity check after parsing Packages/Sources files to avoid completely
     deleting a mirror in case of unexpected errors (#451021, #435663).
+  * Debian mirrors no longer keep uncompressed packages files; don't include
+    them on the local mirror either.
 
  -- Frans Pop <fjp@debian.org>  Tue, 11 Aug 2009 14:38:27 +0200
 
