--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ debmirror (2009xxxx) UNRELEASED; urgency=low
     deleting a mirror in case of unexpected errors (#451021, #435663).
   * Debian mirrors no longer keep uncompressed packages files; don't include
     them on the local mirror either.
+  * Apply patch from A. Mennucc for more efficient removal of empty
+    directories. Closes: #453091.
 
  -- Frans Pop <fjp@debian.org>  Tue, 11 Aug 2009 14:38:27 +0200
 
