--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ debmirror (2009xxxx) UNRELEASED; urgency=low
     them on the local mirror either.
   * Apply patch from A. Mennucc for more efficient removal of empty
     directories. Closes: #453091.
+  * Improve man page for --getcontents switch. Closes: #524967.
+    Thanks to Slaven Rezic for the suggestion.
 
  -- Frans Pop <fjp@debian.org>  Tue, 11 Aug 2009 14:38:27 +0200
 
