--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ debmirror (2009xxxx) UNRELEASED; urgency=low
     directories. Closes: #453091.
   * Improve man page for --getcontents switch. Closes: #524967.
     Thanks to Slaven Rezic for the suggestion.
+  * Don't fetch Contents files if they are already up-to-date (#436027).
 
  -- Frans Pop <fjp@debian.org>  Tue, 11 Aug 2009 14:38:27 +0200
 
