Switch to more common versioning scheme
Start at 1.0; requires an epoch.

git-svn-id: svn://svn.debian.org/debmirror/trunk@42 73d8de8a-19be-0310-9dbb-b31ba50de310

--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,4 +1,4 @@
-debmirror (2009xxxx) UNRELEASED; urgency=low
+debmirror (1:1.0) unstable; urgency=low
 
   * In line with official Debian mirrors, debmirror will no longer
     include uncompressed Packages and Sources files on the local mirror.
