--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ debmirror (1:1.0) UNRELEASED; urgency=low
   * Improve man page for --getcontents switch. Closes: #524967.
     Thanks to Slaven Rezic for the suggestion.
   * Don't fetch Contents files if they are already up-to-date (#436027).
+  * Remove reduntant slashes in paths from Package files. Closes: #471946.
+    Thanks to Raphael Hertzog for the patch.
 
  -- Frans Pop <fjp@debian.org>  Tue, 11 Aug 2009 14:38:27 +0200
 
