--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,8 @@ debmirror (1:1.0) UNRELEASED; urgency=low
   * Don't fetch Contents files if they are already up-to-date (#436027).
   * Remove reduntant slashes in paths from Package files. Closes: #471946.
     Thanks to Raphael Hertzog for the patch.
+  * Update tables showing archive size in man page, using new mirror-size
+    script. Closes: #498541.
 
  -- Frans Pop <fjp@debian.org>  Tue, 11 Aug 2009 14:38:27 +0200
 
