--- a/debian/NEWS
+++ b/debian/NEWS
@@ -5,7 +5,20 @@ debmirror (1:1.0) unstable; urgency=low
     The only exception is when the remote mirror itself does not contain
     a gzipped Packages/Sources file.
 
- -- Frans Pop <fjp@debian.org>  Tue, 18 Aug 2009 13:47:42 +0200
+  * Automatic creation and update of codename->suite symlinks
+
+    Debmirror will now extract the correct codename and suite from
+    the Release file and use those for the local mirror. The directory
+    name of a release will always be the codename, and a symlink will
+    be created for the suite. This means it no longer makes any
+    difference whether you pass --dists=<codename> or --dists=<suite>.
+
+    Your local mirror will need to be converted if it currently uses
+    suites as directories. Use the --omit-suite-symlinks to allow
+    debmirror to automatically do the conversion for you. This should
+    only need to be done once.
+
+ -- Frans Pop <fjp@debian.org>  Thu, 20 Aug 2009 10:09:46 +0200
 
 debmirror (20070123) unstable; urgency=low
 
