Fix format of news entry
git-svn-id: svn://svn.debian.org/debmirror/trunk@60 73d8de8a-19be-0310-9dbb-b31ba50de310

--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,9 +1,11 @@
 debmirror (1:1.0) unstable; urgency=low
 
-  * In line with official Debian mirrors, debmirror will no longer
-    include uncompressed Packages and Sources files on the local mirror.
-    The only exception is when the remote mirror itself does not contain
-    a gzipped Packages/Sources file.
+  * Uncompressed Packages/Sources files
+
+    In line with official Debian mirrors, debmirror will no longer
+    include uncompressed Packages and Sources files on the local
+    mirror. The only exception is when the remote mirror itself does
+    not contain a gzipped Packages/Sources file.
 
   * Automatic creation and update of codename->suite symlinks
 
