--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,9 @@ debmirror (1:1.0) UNRELEASED; urgency=low
     Thanks to Raphael Hertzog for the patch.
   * Update tables showing archive size in man page, using new mirror-size
     script. Closes: #498541.
+  * Automatically create and update codename->suite symlinks based on info
+    from the Release file. Directories for dists will always have the codename
+    of the release. Supports conversion of existing mirrors. Closes: #426170.
 
  -- Frans Pop <fjp@debian.org>  Tue, 11 Aug 2009 14:38:27 +0200
 
