--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 debmirror (1:1.0) UNRELEASED; urgency=low
 
   * Switch to more common versioning scheme; requires an epoch.
+  * Clarify version of GPL (version 2 or later).
+  * Update periods of activity for various maintainers of the script both
+    in the perl script and in the debian/copyright file.
   * Set more accurate versioned build dependency on debhelper.
   * Apply patch from Kees Cook to make parsing of Packages/Sources files a bit
     less fragile. Closes: #451021.
@@ -24,7 +27,7 @@ debmirror (1:1.0) UNRELEASED; urgency=low
     the release. Conversion of existing mirrors that use suites for directories
     is supported. See also NEWS.Debian. Closes: #426170.
 
- -- Frans Pop <fjp@debian.org>  Tue, 11 Aug 2009 14:38:27 +0200
+ -- Frans Pop <fjp@debian.org>  Wed, 12 Aug 2009 19:33:54 +0200
 
 debmirror (20090807) unstable; urgency=low
 
