--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debmirror (1:1.0) UNRELEASED; urgency=low
+debmirror (1:1.0) unstable; urgency=low
 
   * Switch to more common versioning scheme; requires an epoch.
   * Clarify version of GPL (version 2 or later).
@@ -27,7 +27,7 @@ debmirror (1:1.0) UNRELEASED; urgency=low
     the release. Conversion of existing mirrors that use suites for directories
     is supported. See also NEWS.Debian. Closes: #426170.
 
- -- Frans Pop <fjp@debian.org>  Wed, 12 Aug 2009 19:33:54 +0200
+ -- Frans Pop <fjp@debian.org>  Thu, 20 Aug 2009 19:43:39 +0200
 
 debmirror (20090807) unstable; urgency=low
 
