Skip debian-installer sections for source packages
D-I only has binary packages; the source is included in the regular
sections. Based on a patch from Ernesto Hernández-Novich, with thanks.

git-svn-id: svn://svn.debian.org/debmirror/trunk@75 73d8de8a-19be-0310-9dbb-b31ba50de310

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debmirror (1:1.0.1) UNRELEASED; urgency=low
+
+  * Skip debian-installer sections for source packages. D-I only has binary
+    packages; the source is included in the regular sections. Closes: #542826.
+    Based on a patch from Ernesto Hernández-Novich, with thanks.
+
+ -- Frans Pop <fjp@debian.org>  Sat, 22 Aug 2009 00:09:18 +0200
+
 debmirror (1:1.0) unstable; urgency=low
 
   * Switch to more common versioning scheme; requires an epoch.
