--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ debmirror (1:1.0.1) UNRELEASED; urgency=low
   * Skip debian-installer sections for source packages. D-I only has binary
     packages; the source is included in the regular sections. Closes: #542826.
     Based on a patch from Ernesto Hernández-Novich, with thanks.
+  * Allow for the fact that for experimental the suite and codename are
+    identical. Thanks to Craig Sanders. Closes: #542929.
 
  -- Frans Pop <fjp@debian.org>  Sat, 22 Aug 2009 00:09:18 +0200
 
