--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debmirror (1:1.0.2) UNRELEASED; urgency=low
+
+  * Remove duplicated checks of md5sums for Packages/Sources files.
+
+ -- Frans Pop <fjp@debian.org>  Sun, 23 Aug 2009 10:14:46 +0200
+
 debmirror (1:1.0.1) unstable; urgency=low
 
   * Skip debian-installer sections for source packages. D-I only has binary
