--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 debmirror (1:1.0.2) UNRELEASED; urgency=low
 
   * Remove duplicated checks of md5sums for Packages/Sources files.
+  * Improve performance of parsing Packages/Sources files (by a factor of
+    about 30).
 
  -- Frans Pop <fjp@debian.org>  Sun, 23 Aug 2009 10:14:46 +0200
 
