--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ debmirror (1:1.0.2) UNRELEASED; urgency=low
   * Remove duplicated checks of md5sums for Packages/Sources files.
   * Improve performance of parsing Packages/Sources files (by a factor of
     about 30).
+  * Revert change in directory removal as otherwise also empty parent
+    directories of empty directories no longer get removed.
 
  -- Frans Pop <fjp@debian.org>  Sun, 23 Aug 2009 10:14:46 +0200
 
