--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,10 @@ debmirror (1:1.0.2) UNRELEASED; urgency=low
     about 30).
   * Revert change in directory removal as otherwise also empty parent
     directories of empty directories no longer get removed.
+  * Fix support for mirrors with need extra directories in dist, such as
+    security mirrors, which got broken by the suite->codename symlink
+    changes. Thanks to Christoph Goehre for reporting the issue and testing
+    the fix. Closes: #543775.
 
  -- Frans Pop <fjp@debian.org>  Sun, 23 Aug 2009 10:14:46 +0200
 
