--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,3 +1,13 @@
+debmirror (1:1.0.2) UNRELEASED; urgency=low
+
+  * Option --root=directory no longer requires "/" or ":" prefix
+
+    It is not possible to leave the default at "debian" and all
+    transfer methods should just work. For backwards compatibility
+    debmirror will remove a leading "/" or ":" if one is passed.
+
+ -- Frans Pop <fjp@debian.org>  Thu, 27 Aug 2009 14:35:03 +0200
+
 debmirror (1:1.0) unstable; urgency=low
 
   * Uncompressed Packages/Sources files
