--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ debmirror (1:1.0.2) UNRELEASED; urgency=low
     security mirrors, which got broken by the suite->codename symlink
     changes. Thanks to Christoph Goehre for reporting the issue and testing
     the fix. Closes: #543775.
+  * No longer requires a leading "/" or ":" for the root directory. This
+    means the same --root option can be used for both http/ftp and rsync.
 
  -- Frans Pop <fjp@debian.org>  Sun, 23 Aug 2009 10:14:46 +0200
 
