--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ debmirror (1:1.0.2) UNRELEASED; urgency=low
     means the same --root option can be used for both http/ftp and rsync.
   * Improve accounting of download size and display in B/kiB/MiB depending
     on the size of the download. Closes: #520487.
+  * Don't write the trace file until the meta data is also in place, and
+    don't write one during a dry run.
 
  -- Frans Pop <fjp@debian.org>  Sun, 23 Aug 2009 10:14:46 +0200
 
