--- a/debian/NEWS
+++ b/debian/NEWS
@@ -6,6 +6,21 @@ debmirror (1:1.0.2) UNRELEASED; urgency=low
     transfer methods should just work. For backwards compatibility
     debmirror will remove a leading "/" or ":" if one is passed.
 
+  * More efficient mirroring through use of a state cache
+
+    Debmirror now has the option to save the state of the mirror to a
+    cache file between runs. The cache has a configurable expiry time.
+    While the cache is valid, debmirror will trust that the mirror is
+    consistent with this cache instead of checking the presence of
+    files on disk. Use of the cache avoids a large amount of disk access
+    and may reduce the time required for updates.
+
+    The limited validity of the cache ensures that the actual state of
+    the mirror still gets checked periodically. You may want to consider
+    using the --md5sums option in combination with the state cache.
+
+    See the man page for details.
+
  -- Frans Pop <fjp@debian.org>  Thu, 27 Aug 2009 14:35:03 +0200
 
 debmirror (1:1.0) unstable; urgency=low
