--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,8 @@ debmirror (1:1.0.2) UNRELEASED; urgency=low
     on the size of the download. Closes: #520487.
   * Don't write the trace file until the meta data is also in place, and
     don't write one during a dry run.
+  * Add option to use a cache file to save the state of the mirror between
+    runs, allowing for more efficient mirror runs. Closes: #483922.
 
  -- Frans Pop <fjp@debian.org>  Sun, 23 Aug 2009 10:14:46 +0200
 
