--- a/debian/NEWS
+++ b/debian/NEWS
@@ -21,6 +21,12 @@ debmirror (1:2.0) UNRELEASED; urgency=low
 
     See the man page for details.
 
+  * Support for mirroring "current" Debian Installer images
+
+    With the option to specify a different set of dists and arches than
+    for the package archive. In this release only the http method is
+    supported and there will be no progress updates.
+
  -- Frans Pop <fjp@debian.org>  Thu, 27 Aug 2009 14:35:03 +0200
 
 debmirror (1:1.0) unstable; urgency=low
