--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,10 @@ debmirror (1:2.0) UNRELEASED; urgency=low
     don't write one during a dry run.
   * Add option to use a cache file to save the state of the mirror between
     runs, allowing for more efficient mirror runs. Closes: #483922.
+  * Supports mirroring "current" Debian Installer images.
+    With the option to specify a different set of dists and arches than
+    for the package archive. In this release only the http method is
+    supported and there will be no progress updates. Closes: #154966.
 
  -- Frans Pop <fjp@debian.org>  Sun, 23 Aug 2009 10:14:46 +0200
 
