Turns out mirroring D-I images does work over all transfer methods
git-svn-id: svn://svn.debian.org/debmirror/trunk@113 73d8de8a-19be-0310-9dbb-b31ba50de310

--- a/debian/NEWS
+++ b/debian/NEWS
@@ -24,8 +24,8 @@ debmirror (1:2.0) UNRELEASED; urgency=low
   * Support for mirroring "current" Debian Installer images
 
     With the option to specify a different set of dists and arches than
-    for the package archive. In this release only the http method is
-    supported and there will be no progress updates.
+    for the package archive. In this release there are no progress
+    updates displayed yet.
 
  -- Frans Pop <fjp@debian.org>  Thu, 27 Aug 2009 14:35:03 +0200
 
