--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debmirror (1:2.0) UNRELEASED; urgency=low
+debmirror (1:2.0) unstable; urgency=low
 
   * Remove duplicated checks of md5sums for Packages/Sources files.
   * Improve performance of parsing Packages/Sources files (by a factor of
@@ -22,7 +22,7 @@ debmirror (1:2.0) UNRELEASED; urgency=low
     for the package archive. In this release there are no progress updates
     displayed yet. Closes: #154966.
 
- -- Frans Pop <fjp@debian.org>  Sun, 23 Aug 2009 10:14:46 +0200
+ -- Frans Pop <fjp@debian.org>  Fri, 28 Aug 2009 15:32:37 +0200
 
 debmirror (1:1.0.1) unstable; urgency=low
 
