--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debmirror (1:2.1) UNRELEASED; urgency=low
+
+  * Fix location of debmirror.conf. Closes: #544139.
+
+ -- Frans Pop <fjp@debian.org>  Sat, 29 Aug 2009 13:08:39 +0200
+
 debmirror (1:2.0) unstable; urgency=low
 
   * Remove duplicated checks of md5sums for Packages/Sources files.
