Don't display download speed if rsync is used as transfer method
git-svn-id: svn://svn.debian.org/debmirror/trunk@119 73d8de8a-19be-0310-9dbb-b31ba50de310

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 debmirror (1:2.1) UNRELEASED; urgency=low
 
   * Fix location of debmirror.conf. Closes: #544139.
+  * Don't display download speed if rsync is used. Closes: #422100.
 
  -- Frans Pop <fjp@debian.org>  Sat, 29 Aug 2009 13:08:39 +0200
 
