New option --rsync-extra to download additional files using rsync
Some files/directories on Debian mirrors are not listed in index files
and can even be said not to be part of the actual archive. For such
files rsync is the most natural transfer method as that avoids the need
of a complicated check which files have been added/changed/removed.

Supported with this commit are:
- mirror trace files (./project/trace/*)
- the directory ./doc plus ./README* files
- the directory ./indices
- the directory ./tools

Specified files/dircetories are automatically added to the "ignore" list
so that they don't get deleted during the cleanup stage.

git-svn-id: svn://svn.debian.org/debmirror/trunk@121 73d8de8a-19be-0310-9dbb-b31ba50de310

--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,3 +1,20 @@
+debmirror (1:2.1) UNRELEASED; urgency=low
+
+  * Support mirroring of trace files, ./doc, ./indices and ./tools
+
+    Mirroring trace files and files from the listed directories can be
+    specified using the --rsync-extra option. As the name implies,
+    debmirror will always use rsync to transfer these files, irrespective
+    of what transfer method is specified in the --method option.
+
+    With this new feature, debmirror can mirror all files needed to
+    create custom CD images using debian-cd. Note that current versions
+    of debian-cd no longer require the ./indices directory.
+
+    See the man page for details.
+
+ -- Frans Pop <fjp@debian.org>  Sat, 29 Aug 2009 15:16:40 +0200
+
 debmirror (1:2.0) unstable; urgency=low
 
   * Option --root=directory no longer requires "/" or ":" prefix
