--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ debmirror (1:2.1) UNRELEASED; urgency=low
     the mirror: trace files, ./doc, ./indices and ./tools. The transfer
     method used for this is always rsync, irrespective of what method is
     specified in the --method option. Closes: #153680, #156564.
+  * Ubuntu uses an identical Codename for different suites, so just ignore
+    it and use the Suite instead. Closes: #544132.
 
  -- Frans Pop <fjp@debian.org>  Sat, 29 Aug 2009 13:08:39 +0200
 
