--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debmirror (1:2.1.1) UNRELEASED; urgency=low
+
+  * Register the trace and lock files only after loading the state cache.
+
+ -- Frans Pop <fjp@debian.org>  Mon, 31 Aug 2009 14:11:09 +0200
+
 debmirror (1:2.1) unstable; urgency=low
 
   * Fix location of debmirror.conf. Closes: #544139.
