--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debmirror (1:2.1.2) UNRELEASED; urgency=low
+
+  * Allow to include/exclude specific files belonging to D-I images.
+
+ -- Frans Pop <fjp@debian.org>  Fri, 11 Sep 2009 15:27:14 +0200
+
 debmirror (1:2.1.1) unstable; urgency=low
 
   * Register the trace and lock files only after loading the state cache.
