--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,3 +1,13 @@
+debmirror (1:2.2) UNRELEASED; urgency=low
+
+  * Support for mirroring translated packages descriptions
+
+    If the option --i18n is passed, debmirror will also mirror the files
+    containing translated package descriptions. The --include and --exclude
+    options can be used to select which translations to mirror.
+
+ -- Frans Pop <fjp@debian.org>  Fri, 11 Sep 2009 14:49:52 +0200
+
 debmirror (1:2.1) unstable; urgency=low
 
   * Support mirroring of trace files, ./doc, ./indices and ./tools
