--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-debmirror (1:2.1.2) UNRELEASED; urgency=low
+debmirror (1:2.2) UNRELEASED; urgency=low
 
   * Allow to include/exclude specific files belonging to D-I images.
+  * Add support for downloading package translation files. Closes: #436030.
 
  -- Frans Pop <fjp@debian.org>  Fri, 11 Sep 2009 15:27:14 +0200
 
