--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-debmirror (1:2.2) UNRELEASED; urgency=low
+debmirror (1:2.2) unstable; urgency=low
 
   * Allow to include/exclude specific files belonging to D-I images.
   * Add support for downloading package translation files. Closes: #436030.
+  * Move archive size information to a separate file in /usr/share/doc.
 
- -- Frans Pop <fjp@debian.org>  Fri, 11 Sep 2009 15:27:14 +0200
+ -- Frans Pop <fjp@debian.org>  Sat, 12 Sep 2009 08:59:31 +0200
 
 debmirror (1:2.1.1) unstable; urgency=low
 
