--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debmirror (1:2.2.1) UNRELEASED; urgency=low
+
+  * Only fetch i18n Index files if needed.
+
+ -- Frans Pop <fjp@debian.org>  Tue, 22 Sep 2009 17:55:11 +0200
+
 debmirror (1:2.2) unstable; urgency=low
 
   * Allow to include/exclude specific files belonging to D-I images.
