--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-debmirror (1:2.2.1) UNRELEASED; urgency=low
+debmirror (1:2.2.1) unstable; urgency=low
 
   * Only fetch i18n Index files if needed.
   * Fix mirroring D-I images when the archive is also being mirrored for the
     same dist. Closes: #547789.
 
- -- Frans Pop <fjp@debian.org>  Tue, 22 Sep 2009 17:55:11 +0200
+ -- Frans Pop <fjp@debian.org>  Tue, 22 Sep 2009 18:12:05 +0200
 
 debmirror (1:2.2) unstable; urgency=low
 
