--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ debmirror (1:2.3) UNRELEASED; urgency=low
     reduce the download size when Contents files change. Closes: #436027.
   * Because of the previous change the option --pdiff has been renamed to
     --diff as 'package diffs' no longer covers its use.
+  * Fix mirroring archives without a Release file (--ignore-missing-release).
 
  -- Frans Pop <fjp@debian.org>  Sat, 03 Oct 2009 11:55:33 +0200
 
