--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,4 +1,4 @@
-debmirror (1:2.3) UNRELEASED; urgency=low
+debmirror (1:2.3) unstable; urgency=low
 
   * Use diff files to update Contents files; option --pdiff is now --diff
 
@@ -11,7 +11,7 @@ debmirror (1:2.3) UNRELEASED; urgency=low
     affects only "package diffs". For the configuration file the variable
     to use is now '$diff_mode'.
 
- -- Frans Pop <fjp@debian.org>  Sat, 03 Oct 2009 12:00:07 +0200
+ -- Frans Pop <fjp@debian.org>  Sat, 03 Oct 2009 13:33:39 +0200
 
 debmirror (1:2.2) unstable; urgency=low
 
