--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,13 @@
-debmirror (1:2.3) UNRELEASED; urgency=low
+debmirror (1:2.3) unstable; urgency=low
 
   * Support updating Contents files using diff files. This can significantly
     reduce the download size when Contents files change. Closes: #436027.
   * Because of the previous change the option --pdiff has been renamed to
     --diff as 'package diffs' no longer covers its use.
   * Fix mirroring archives without a Release file (--ignore-missing-release).
+  * Minor other fixes and improvements.
 
- -- Frans Pop <fjp@debian.org>  Sat, 03 Oct 2009 11:55:33 +0200
+ -- Frans Pop <fjp@debian.org>  Sat, 03 Oct 2009 13:33:46 +0200
 
 debmirror (1:2.2.1) unstable; urgency=low
 
