--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debmirror (1:2.4.1) UNRELEASED; urgency=low
+
+  * Update example configuration (closes: #549952):
+    - fix error in variable names for setting D-I dists & arches
+    - add example for setting "extra rsync directories"
+
+ -- Frans Pop <fjp@debian.org>  Wed, 07 Oct 2009 21:01:48 +0200
+
 debmirror (1:2.3) unstable; urgency=low
 
   * Support updating Contents files using diff files. This can significantly
