--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ debmirror (1:2.4.1) UNRELEASED; urgency=low
   * Update example configuration (closes: #549952):
     - fix error in variable names for setting D-I dists & arches
     - add example for setting "extra rsync directories"
+  * Rename variables so that @dists can be set again in a configuration file.
+    Closes: #549952.
 
  -- Frans Pop <fjp@debian.org>  Wed, 07 Oct 2009 21:01:48 +0200
 
