Enable LWP::ConnCache for the http transfer method
Pass keep_alive => 1 for LWP::UserAgent->new.

As most servers hosting Debian mirrors probably already use HTTP/1.1 by
default this may not provide huge gains, but it also seems unlikely that
enabling the option will cause any problems.
Possibly the internal connection cache will give some benefits.

Thanks to Gregor Herrmann for pointing out the option.

git-svn-id: svn://svn.debian.org/debmirror/trunk@181 73d8de8a-19be-0310-9dbb-b31ba50de310

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ debmirror (1:2.4.1) UNRELEASED; urgency=low
     - add example for setting "extra rsync directories"
   * Rename variables so that @dists can be set again in a configuration file.
     Closes: #549952.
+  * Enable LWP::ConnCache for the http transfer method. Closes: #395538.
+    Thanks to Gregor Herrmann for pointing out the option.
 
  -- Frans Pop <fjp@debian.org>  Wed, 07 Oct 2009 21:01:48 +0200
 
