Fix mirroring of archives without a Release.gpg file
Also restructure and clean up the function that performs the check and
better document the use of the --ignore-release-gpg option.

Thanks to Loïc Minier for tracing the issue.

git-svn-id: svn://svn.debian.org/debmirror/trunk@196 73d8de8a-19be-0310-9dbb-b31ba50de310

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ debmirror (1:2.4) UNRELEASED; urgency=low
     This change may cause unnecessary download of the gzipped Packages/Sources
     files for other archives that provide pdiffs but don't have rsyncable
     gzipped files; this can be fixed using the new option --gzip-options.
+  * Fix mirroring of archives without a Release.gpg file. Closes: #561533.
+    Thanks to Loïc Minier for tracing the issue.
 
  -- Frans Pop <fjp@debian.org>  Sat, 19 Dec 2009 21:01:34 +0100
 
