--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ debmirror (1:2.4) UNRELEASED; urgency=low
     gzipped files; this can be fixed using the new option --gzip-options.
   * Fix mirroring of archives without a Release.gpg file. Closes: #561533.
     Thanks to Loïc Minier for tracing the issue.
+  * Allow to specify the local mirror directory in config files.
+    Closes: #544141.
 
  -- Frans Pop <fjp@debian.org>  Sat, 19 Dec 2009 21:01:34 +0100
 
