Add versioned dependency on perl >= 5.10
There is one line in the current version that's not supported by the Etch
version of perl (5.8.x):
    my $dist_sdir = $1 // "";

git-svn-id: svn://svn.debian.org/debmirror/trunk@200 73d8de8a-19be-0310-9dbb-b31ba50de310

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ debmirror (1:2.4) UNRELEASED; urgency=low
     Thanks to Loïc Minier for tracing the issue.
   * Allow to specify the local mirror directory in config files.
     Closes: #544141.
+  * Add versioned dependency on perl (>= 5.10). Closes: #551878.
 
  -- Frans Pop <fjp@debian.org>  Sat, 19 Dec 2009 21:01:34 +0100
 
