--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debmirror (1:2.4.1) UNRELEASED; urgency=low
+
+  * Typo fixes in NEWS.Debian file spotted by Geoff Simmons. Closes: #566377.
+
+ -- Frans Pop <fjp@debian.org>  Sun, 24 Jan 2010 06:56:52 +0100
+
 debmirror (1:2.4) unstable; urgency=low
 
   * The main Debian archive has started to use rsyncable gzip files.
