--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debmirror (1:2.4.2) UNRELEASED; urgency=low
+
+  * Really allow for Release files without Origin field. Closes: #565593.
+
+ -- Frans Pop <fjp@debian.org>  Sun, 31 Jan 2010 14:20:46 +0100
+
 debmirror (1:2.4.1) unstable; urgency=low
 
   * Typo fixes in NEWS.Debian file spotted by Geoff Simmons. Closes: #566377.
