--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-debmirror (1:2.4.2) UNRELEASED; urgency=low
+debmirror (1:2.4.2) unstable; urgency=low
 
   * Really allow for Release files without Origin field. Closes: #565593.
 
- -- Frans Pop <fjp@debian.org>  Sun, 31 Jan 2010 14:20:46 +0100
+ -- Frans Pop <fjp@debian.org>  Sun, 31 Jan 2010 14:21:46 +0100
 
 debmirror (1:2.4.1) unstable; urgency=low
 
