Don't delete Contents and Translation files with early mirror cleanup
With pre-mirror cleanup Contents and Translation files need to be
downloaded before the cleanup as otherwise they would be deleted
(and later re-downloaded) because they haven't been registered yet.

With post-mirror cleanup it's more neat to do all downloads together.

This could be simplified if we could register the files earlier.

git-svn-id: svn://svn.debian.org/debmirror/trunk@212 73d8de8a-19be-0310-9dbb-b31ba50de310

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debmirror (1:2.4.3) UNRELEASED; urgency=low
+
+  * Don't delete Contents and Translation files if mirror cleanup is done
+    early. Closes: #568613.
+
+ -- Frans Pop <fjp@debian.org>  Sat, 06 Feb 2010 14:03:27 +0100
+
 debmirror (1:2.4.2) unstable; urgency=low
 
   * Really allow for Release files without Origin field. Closes: #565593.
