--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debmirror (1:2.4.4) UNRELEASED; urgency=low
+
+  * Fix typo in mirror_size. Closes: #575352.
+
+ -- Frans Pop <fjp@debian.org>  Thu, 25 Mar 2010 18:42:51 +0100
+
 debmirror (1:2.4.3) unstable; urgency=low
 
   * Don't delete Contents and Translation files if mirror cleanup is done
