Fix that setting $dry_run in the config file has no effect
Currently a user would have to set $dry_run_var instead, but it is
preferable to keep the name of options and config variables similar.
So change the internal use of dry-run variables so that setting
$dry_run in the config file actually works.

Thanks to Piotr Lewandowski for reporting the issue.

git-svn-id: svn://svn.debian.org/debmirror/trunk@219 73d8de8a-19be-0310-9dbb-b31ba50de310

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 debmirror (1:2.4.4) UNRELEASED; urgency=low
 
   * Fix typo in mirror_size. Closes: #575352.
+  * Change internal use of dry-run variables so that setting $dry_run in
+    the config file actually works. Closes: #569348.
 
  -- Frans Pop <fjp@debian.org>  Thu, 25 Mar 2010 18:42:51 +0100
 
