--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debmirror (1:2.4.5) UNRELEASED; urgency=low
+
+  * Drop support for the --adddir option which was obsoleted log ago.
+
+ -- Frans Pop <fjp@debian.org>  Thu, 05 Aug 2010 15:29:20 +0200
+
 debmirror (1:2.4.4) unstable; urgency=low
 
   * Fix typo in mirror_size. Closes: #575352.
