--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debmirror (1:2.4.6) UNRELEASED; urgency=low
+debmirror (1:2.4.6) unstable; urgency=low
 
   * New maintainer. Frans, we'll miss you.
     Closes: #595690
@@ -6,7 +6,7 @@ debmirror (1:2.4.6) UNRELEASED; urgency=low
     history from my home directory. Closes: #594976
   * Fix filename of mirror_size file in man page. Closes: #594975
 
- -- Joey Hess <joeyh@debian.org>  Sun, 05 Sep 2010 18:08:23 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 05 Sep 2010 18:54:21 -0400
 
 debmirror (1:2.4.5) unstable; urgency=low
 
