--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debmirror (1:2.4.7) UNRELEASED; urgency=low
+
+  * Clean up output messages.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 26 Sep 2010 16:01:44 -0400
+
 debmirror (1:2.4.6) unstable; urgency=low
 
   * New maintainer. Frans, we'll miss you.
