--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ debmirror (1:2.4.7) UNRELEASED; urgency=low
 
   * Clean up output messages.
   * Apply program return code checking patch by Kees Cook.
+  * Allow umask to control directory permissions in mkdir. Closes: #589397
 
  -- Joey Hess <joeyh@debian.org>  Sun, 05 Sep 2010 19:02:16 -0400
 
