--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ debmirror (1:2.4.7) UNRELEASED; urgency=low
   * Add --slow-cpu option that avoids bzipping and gzipping files.
     Closes: #594948
   * Various code cleanups.
+  * Deprecate --cleanup, which had become confusing since --postcleanup
+    is the default, and add --precleanup.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 05 Sep 2010 19:02:16 -0400
 
