--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,11 @@ debmirror (1:2.4.7) UNRELEASED; urgency=low
   * Deprecate --cleanup, which had become confusing since --postcleanup
     is the default, and add --precleanup.
   * Add --check-gpg (the default) and --no-check-gpg options.
+  * Added a warning message if rsync of extra files fails.
+  * Default to --rsync-extra=trace, unless the user specified 
+    --rsync-extra=none.
+  * Above will ensure that debmirror at least tries
+    to get trace files by default, and warns if it cannot. Closes: #156564
 
  -- Joey Hess <joeyh@debian.org>  Sun, 05 Sep 2010 19:02:16 -0400
 
