--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,7 @@ debmirror (1:2.4.7) UNRELEASED; urgency=low
   * A proxy specified with --proxy or ftp_proxy will now also be used
     for ftp connections.
   * Deprecate --method=hftp, just use --proxy with --method=ftp.
+  * Run rsync with --no-motd except for in --verbose mode.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 05 Sep 2010 19:02:16 -0400
 
