--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,7 @@ debmirror (1:2.5) UNRELEASED; urgency=low
   * Run rsync with --no-motd except for in --verbose mode.
   * Support --progress for http. (Per #598382)
   * Apply manpage markup patch from liw. Closes: #599414
+  * Fix typo in default rsync options. Closes: #599568
 
  -- Joey Hess <joeyh@debian.org>  Sun, 05 Sep 2010 19:02:16 -0400
 
