--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debmirror (1:2.5) UNRELEASED; urgency=low
+debmirror (1:2.5) unstable; urgency=low
 
   * Clean up output messages.
   * Apply program return code checking patch by Kees Cook.
@@ -26,7 +26,7 @@ debmirror (1:2.5) UNRELEASED; urgency=low
   * Add --debmarshal snapshot mode by Drake Diedrich. Closes: #550007
   * Send verbose/debug mode gpgv error messages to stdout. Closes: #607099
 
- -- Joey Hess <joeyh@debian.org>  Sun, 05 Sep 2010 19:02:16 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 05 Feb 2011 12:40:14 -0400
 
 debmirror (1:2.4.6) unstable; urgency=low
 
