--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debmirror (1:2.6) UNRELEASED; urgency=low
+
+  * Support sha checksums in Release files, and use in preference to md5.
+    Closes: #614383
+  * Full checksum validation is now enabled by the --checksums switch.
+    (The old --md5sums switch is an alias to that for backwards compatability.)
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 21 Feb 2011 15:01:12 -0400
+
 debmirror (1:2.5) unstable; urgency=low
 
   * Clean up output messages.
