Now depends on libdigest-sha-perl.

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ debmirror (1:2.6) UNRELEASED; urgency=low
     Closes: #614383
   * Full checksum validation is now enabled by the --checksums switch.
     (The old --md5sums switch is an alias to that for backwards compatability.)
+  * Now depends on libdigest-sha-perl.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 21 Feb 2011 15:01:12 -0400
 
