--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debmirror (1:2.7) UNRELEASED; urgency=low
+
+  * Version dep on LWP. Closes: #614594
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 22 Feb 2011 11:38:33 -0400
+
 debmirror (1:2.6) unstable; urgency=high
 
   * In Release, Packages, and Sources files, support all sizes of SHA
