--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debmirror (1:2.7) UNRELEASED; urgency=low
+debmirror (1:2.7) unstable; urgency=high
 
   * Version dep on LWP. Closes: #614594
   * Fix typo in d-i download code. Closes: #614620
 
- -- Joey Hess <joeyh@debian.org>  Tue, 22 Feb 2011 11:38:33 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 22 Feb 2011 13:54:12 -0400
 
 debmirror (1:2.6) unstable; urgency=high
 
